--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,32 +13,38 @@
   }
   
   body {
-    color: var(--third-color);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: var(--first);
+    background-color: var(--fourth);
+    line-height: 3;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
-
-  /* HEADER & NAGIVATION SECTION */
+  
+  /* Styled the Navigation and Header Section with flex properties*/
   header {
-    padding: 20px 35px;
-    background-color: var(--third-color);
+    padding: 15px;
+    background-color: var(--third);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: center;
+    top: 0;
     position: sticky;
     position: -webkit-sticky;
-    top: 0;
+    z-index: 9999;
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
-    z-index: 9999;
   }
   
-header h1 {
-    font-weight: bold;
+  header h1 {
+    padding: 5px 2% 5px 10%;
+    color: var(--third);
+    background-color: var(--second);
     margin: 0;
-    font-size: 36px;
-    color: var(--second-color);
+    font-size: 3.5vw;
+    line-height: 1;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    flex-grow: calc(0);
   }
   
   header a {
