--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,3 +162,30 @@ color: var(--second);
 font-size: x-large ;
 margin-bottom: 15px;
 }
+
+/* Styled the Work/Grid section in a grid layout with flex properties*/
+.grid-container {
+    display: grid;
+    grid-auto-flow: row dense;
+    grid-template-rows: repeat(1, 1fr);
+    grid-auto-rows: minmax(250px, 1fr);
+    row-gap: 30px;
+    column-gap: 30px;
+  }
+  
+  .grid-item {
+    grid-column: span 4;
+    border: 8px solid var(--second);
+    background-color: var(--third);
+    background-blend-mode:hard-light;
+    background-size: cover;
+    color: var(--third);
+    text-decoration: none;
+    min-height: 100%; /* browser fill */
+    display: flex;
+    align-items: flex-end;
+    padding: 5px;
+    transition: all 1s;
+    font-size: 1rem;
+  }
+  
