added interactive front end project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,8 +214,8 @@ margin-bottom: 15px;
   background-image: url("../images/Horiseon-refactor-screen-shot.png");
 }
 
-.placeholder {
-  background-image: url("../images/placeholder.png");
+.lovematch {
+  background-image: url("../images/love-match-calculator-screenshot.png");
 }
 
 /* Styled the CONTACT SECTION with flex properties*/
